--- a/src/views/Test/test.scss
+++ b/src/views/Test/test.scss
@@ -6,3 +6,10 @@
     margin: 0 auto;
   }
 }
+.user {
+  width: 200px;
+  height: 100px;
+  text-align: center;
+  line-height: 100px;
+  background-color: beige;
+}
